<resources>
    <string name="app_name">Practice</string>
    <string name="control_your_wallet">Control your wallet in \n a new way</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_here">Reset here</string>
    <string name="dont_hv_an_account">Don\'t have an account?</string>
    <string name="create_an_account">create an account</string>

    <string name="paragraph1" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="paragraph2" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</string>
    <string name="export_pdf" translatable="false">Export PDF</string>
    <string name="user_data" translatable="false">User Data</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">GoogleMapsApiKey</string>
    <string name="google_api_key" translatable="false" templateMergeStrategy="preserve">an api key that i got from google here</string>
</resources>